# Tula

./: .gitignore  AGENTS.md  DEPENDENCIES.md  QUICKSTART.md  README.md  TEST_GUIDE.md  USAGE.md  pyproject.toml  requirements.txt  run_audit.py
config/: llm_config.yaml  tula_config.example.yaml
config/prompts/: README.md  system_prompt.yaml  user_prompts.yaml
docs/: AI_AUDIT_SETUP.md  AI_AUDIT_TEST_RESULTS.md  CHUNKED_REVIEW_IMPLEMENTATION.md  CLIENT_AI_AUDIT_USAGE.md  FULL_REPO_AUDIT_GUIDE.md  OUTPUT_STRUCTURE.md  PACKAGEABLE_AI_AUDIT_SUMMARY.md  PRE_COMMIT_SETUP.md  PRE_COMMIT_TEST_RESULTS.md  REPORT_FILES.md  VIRTUAL_ENV_USAGE.md  llm_config.example.yaml
examples/: audit_git_diff.py  audit_repository.py  basic_usage.py  client_usage.py
src/nikhil/tula/: __init__.py  tula_auditor.py
src/nikhil/tula/domain/code_audit/: __init__.py  ai_auditor.py  cli.py  config.py  markdown_formatter.py  prompt_loader.py  report_manager.py
src/nikhil/tula/domain/code_audit/scripts/: ai_audit.py  install_precommit.ps1
src/nikhil/tula/domain/code_audit/templates/: AGENTS.md.template
src/nikhil/tula/domain/llm_factory/dependency/: llm_container.py
src/nikhil/tula/domain/llm_factory/domain/: llm_type.py  models.py
src/nikhil/tula/domain/llm_factory/example/: llm_example.py
src/nikhil/tula/domain/llm_factory/service/: direct_llm_client.py  llm_builder.py
src/nikhil/tula/domain/llm_factory/settings/: llm_settings.py
src/nikhil/tula/domain/llm_factory/utils/: llm_utils.py
